<resources>
    <!-- General -->
    <string name="app_name" translatable="false">Vánočka</string>
    <string name="offline_error">It seems you\'re offline. Please check your internet connection.</string>
    <string name="no_data_found">No data found</string>
    <string name="error_occurred">An error occurred</string>

    <!-- Products -->
    <string name="title_products">Products</string>
    <string name="product_unit">za %s</string>
    <string name="product_loading_failed">Product loading failed</string>
    <string name="products_loading_failed">Products loading failed</string>

    <!-- Cart -->
    <string name="title_cart">Cart</string>
    <string name="cart_items_loading_failed">Cart items loading failed</string>

    <!-- Profile -->
    <string name="title_profile">Profile</string>
    <string name="profile_photo">Profile photo</string>
    <string name="title_product_detail">Detail product</string>
    <string name="credits">Credits: %d</string>
    <string name="profile_save">Save profile</string>
    <string name="profile_edit">Edit profile</string>
    <string name="profile_delete">Delete profile</string>
    <string name="does_nothing">Does nothing</string>
    <string name="profile_loading_failed">Profile loading failed</string>
    <string name="content_arrow">arrow</string>

</resources>