<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/text_size_normal">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/profile_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/profile_photo"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/profile_photo"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/profile_credits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/credits"
                android:textAlignment="textStart"
                android:textColor="@color/text_tertiary"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintBottom_toBottomOf="@id/profile_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/profile_photo"
                app:layout_constraintTop_toBottomOf="@id/profile_name" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_normal"
                android:layout_marginEnd="@dimen/margin_padding_normal"
                android:layout_marginBottom="@dimen/margin_padding_normal"
                android:text="@string/profile_save"
                android:textColor="@color/text_primary"
                app:layout_constraintBottom_toTopOf="@id/edit_profile" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_normal"
                android:layout_marginEnd="@dimen/margin_padding_normal"
                android:layout_marginBottom="@dimen/margin_padding_normal"
                android:text="@string/profile_edit"
                android:textColor="@color/text_primary"
                app:layout_constraintBottom_toTopOf="@id/delete_profile" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_normal"
                android:layout_marginEnd="@dimen/margin_padding_normal"
                android:layout_marginBottom="@dimen/margin_padding_large"
                android:text="@string/profile_delete"
                android:textColor="@color/text_primary"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/no_data_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/no_data_found"
        android:textAlignment="center"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_size_large"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/overlay"
        layout="@layout/loading_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.constraintlayout.widget.ConstraintLayout>